# Agent-Breaker

./: .env.example  .gitignore  README.md  SPEC.md  breaker.yaml  example_agent.py  example_breaker.yaml  pyproject.toml
agent_breaker/: cli.py  config.py  core.py  generator.py  judge.py  main.py  targets.py  validation.py
agent_breaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_breaker/adapters/: __init__.py  langgraph.py
agent_breaker/attacks/: prompt_injection.py  prompt_injection_clean.py
agent_breaker/templates/: breaker.yaml
